# milton-ai-publicist

./: .env.production.template  .env.template  .gitignore  ALL_PHASES_COMPLETE.md  APPROVAL_DASHBOARD_COMPLETE.md  BACKEND_ACCESS_GUIDE.md  BUILD_STATUS.md  CHECK_ZAPIER_NOW.md  CLERK_QUICK_START.md  CLERK_REDIRECT_SETUP.md  CLERK_SETUP_NEXT_STEPS.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_SYSTEM_OVERVIEW.md  COMPLETE_ZAPIER_LINKEDIN_SETUP.md  COMPREHENSIVE_REVIEW_REPORT.md  DASHBOARD_ACCESS.md  DASHBOARD_MEDIA_UPDATE.md  DASHBOARD_QUICK_START.md  DEPLOYMENT_READINESS.md  DOCUMENTATION_INDEX.md  DUAL_VOICE_TRAINING_COMPLETE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURE_AUDIT.md  FINAL_DIAGNOSIS_NO_POST.md  FINAL_SESSION_SUMMARY.md  FINAL_TEST_AFTER_FIX.md  FIX_COMMENT_FIELD_NOW.md  FIX_ZAPIER_LINKEDIN_CONFIG.md  GEMINI_FREE_GRAPHICS.md  HEYGEN_QUICK_START.md  HEYGEN_SETUP_GUIDE.md  HEYGEN_SETUP_SUMMARY.md  IMPLEMENTATION_STATUS_REVIEW.md  INSTAGRAM_CONNECTION_GUIDE.md  INSTAGRAM_QUICK_START.md  LAUNCH_DASHBOARD.md  LICENSE  LINKEDIN_ZAPIER_SETUP_GUIDE.md  MEDIA_FEATURES_SETUP.md  (+76 more)
api/: __init__.py  index.py
dashboard/: __init__.py  app.py  approval_dashboard.py  dashboard.html  oauth_handlers.py  publishing_endpoints.py  zapier_publisher.py
data/: MILTON_VOICE_KNOWLEDGE_BASE.md  VOICE_PROFILE_TRAINING_GUIDE.md  milton_linkedin_posts.txt  milton_official_statements.txt
database/: add_zapier_publishing_table.sql  database_manager.py  migration_006_analytics_enhancements.sql  migrations.py  schema.sql  schema_simple.sql
module_i/: __init__.py  executive_input_api.py  (+2 more)
(+42 files in other folders)
